<resources>
    <string name="app_name">AreaCalculator</string>
    <string name="length1LabelText">Length 1:</string>
    <string name="length2LabelText">Length 2:</string>
    <string name="length1Value" />
    <string name="length2Value" />
    <string name="selectedFigureText">Select a shape</string>
    <string name="calculateButtonText">Calculate</string>
    <string name="resultText" />
    <string name="clearButtonText">Clear</string>
    <string name="circle">Circle</string>
    <string name="square">Square</string>
    <string name="triangle">Triangle</string>
    <string name="selectAShapeError">Please Select a Shape</string>
    <string name="invalidNumberError">Please give valid input</string>
</resources>
