<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.vamshedhar.areacalculator.MainActivity">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/length1Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:text="@string/length1LabelText"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/length2Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/length2LabelText"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/length1EditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/length1EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/length1Value"
            android:layout_alignBaseline="@+id/length1Label"
            android:layout_alignBottom="@+id/length1Label"
            android:layout_toRightOf="@+id/length1Label"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:id="@+id/length2EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/length2Label"
            android:layout_alignBottom="@+id/length2Label"
            android:layout_alignLeft="@+id/length1EditText"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignStart="@+id/length1EditText"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/length2Value" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="85dp"
            app:srcCompat="@drawable/triangle"
            android:layout_below="@+id/length1EditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="onTriangleClick"/>

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/square"
            android:layout_alignTop="@+id/imageButton"
            android:layout_centerHorizontal="true"
            android:onClick="onSquareCircleClick"/>

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/circle"
            android:layout_alignTop="@+id/imageButton2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="onCircleClick"/>

        <TextView
            android:id="@+id/selectedFigureLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageButton2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27dp"
            android:text="@string/selectedFigureText" />

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/selectedFigureLabel"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp"
            android:text="@string/calculateButtonText"
            android:onClick="onCalculateClick"/>

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/calculateButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:text="@string/resultText" />

        <Button
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/resultTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:text="@string/clearButtonText"
            android:onClick="onClearClick"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
